--- a/Airbnb/topics/03-availability-tracker.html
+++ b/Airbnb/topics/03-availability-tracker.html
@@ -587,6 +587,18 @@
     .hero .stats-row { gap: 16px; }
     .lifecycle-flow { flex-direction: column; align-items: stretch; }
     .flow-arrow { transform: rotate(90deg); text-align: center; padding: 4px 0; }
+    table { font-size: 0.82em; display: block; overflow-x: auto; -webkit-overflow-scrolling: touch; }
+    .diagram-box { overflow-x: auto; -webkit-overflow-scrolling: touch; }
+    .diagram-box svg { min-width: 600px; }
+  }
+  @media (max-width: 480px) {
+    .hero h1 { font-size: 1.4em; }
+    pre { font-size: 0.75em; padding: 14px; }
+  }
+  @media (max-width: 360px) {
+    .hero h1 { font-size: 1.15em; }
+    .hero .stat-value { font-size: 1em; }
+    .container { padding: 10px 8px; }
   }
   /* === DIAGRAM ZOOM CONTROLS === */
   .diagram-box { position: relative; }
