--- a/Airbnb/topics/10-flight-search.html
+++ b/Airbnb/topics/10-flight-search.html
@@ -466,10 +466,18 @@
     .flow-steps { flex-direction: column; }
     .flow-arrow { transform: rotate(90deg); }
     .bar-label { width: 120px; font-size: 0.78em; }
+    table { font-size: 0.82em; display: block; overflow-x: auto; -webkit-overflow-scrolling: touch; }
+    .diagram-box { overflow-x: auto; -webkit-overflow-scrolling: touch; }
+    .diagram-box svg { min-width: 600px; }
   }
   @media (max-width: 480px) {
     .hero h1 { font-size: 1.5em; }
     .metric-grid { grid-template-columns: 1fr 1fr; }
+  }
+  @media (max-width: 360px) {
+    .hero h1 { font-size: 1.15em; }
+    .hero .stat-value { font-size: 1em; }
+    .container { padding: 10px 8px; }
   }
   /* === DIAGRAM ZOOM CONTROLS === */
   .diagram-box { position: relative; }
