--- a/Airbnb/topics/index.html
+++ b/Airbnb/topics/index.html
@@ -157,6 +157,17 @@
     flex-wrap: wrap;
     gap: 8px;
   }
+  @media (max-width: 768px) {
+    .category-nav-grid {
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
+      padding-bottom: 4px;
+    }
+    .category-nav-grid::-webkit-scrollbar { display: none; }
+    .category-nav a { flex-shrink: 0; }
+  }
   .category-nav a {
     color: var(--text-muted);
     text-decoration: none;
@@ -361,19 +372,52 @@
 
   /* RESPONSIVE */
   @media (max-width: 768px) {
-    .hero { padding: 50px 20px 40px; }
-    .hero h1 { font-size: 1.8em; }
-    .hero .subtitle { font-size: 1em; }
-    .hero .stats-row { gap: 20px; }
-    .hero .stat-value { font-size: 1.5em; }
-    .category-nav { padding: 16px 20px; }
-    .container { padding: 0 16px; }
-    .card-grid { grid-template-columns: 1fr; }
-    .category-header h2 { font-size: 1.3em; }
+    .hero { padding: 40px 16px 32px; }
+    .hero h1 { font-size: 1.7em; }
+    .hero .subtitle { font-size: 0.95em; }
+    .hero .back-link { font-size: 0.85em; padding: 8px 18px; }
+    .hero .stats-row { gap: 16px; margin-top: 20px; }
+    .hero .stat-value { font-size: 1.4em; }
+    .hero .stat-label { font-size: 0.7em; letter-spacing: 1px; }
+    .category-nav { padding: 12px 16px; }
+    .category-nav h2 { font-size: 0.75em; margin-bottom: 10px; }
+    .category-nav-grid { gap: 6px; }
+    .category-nav a { padding: 6px 12px; font-size: 0.78em; }
+    .container { padding: 0 12px; }
+    .card-grid { grid-template-columns: 1fr; gap: 14px; }
+    .category-section { padding: 30px 0 14px; }
+    .category-header { gap: 10px; margin-bottom: 18px; }
+    .category-icon { width: 40px; height: 40px; font-size: 1.2em; border-radius: 10px; }
+    .category-header h2 { font-size: 1.25em; }
+    .topic-card a { padding: 20px; }
+    .topic-card h3 { font-size: 1.05em; }
+    .topic-card .description { font-size: 0.85em; }
+    .footer { padding: 28px 16px; font-size: 0.8em; }
   }
   @media (max-width: 480px) {
-    .hero h1 { font-size: 1.5em; }
-    .topic-card a { padding: 20px; }
+    .hero { padding: 32px 12px 24px; }
+    .hero h1 { font-size: 1.35em; line-height: 1.3; }
+    .hero .subtitle { font-size: 0.88em; }
+    .hero .back-link { font-size: 0.8em; padding: 7px 14px; }
+    .hero .stats-row { gap: 10px; }
+    .hero .stat-item { min-width: 60px; }
+    .hero .stat-value { font-size: 1.2em; }
+    .category-nav a { padding: 5px 10px; font-size: 0.72em; }
+    .container { padding: 0 10px; }
+    .topic-card a { padding: 16px; }
+    .topic-card h3 { font-size: 1em; }
+    .topic-number { width: 34px; height: 34px; font-size: 0.85em; border-radius: 8px; }
+    .topic-card-top .arrow { width: 30px; height: 30px; font-size: 0.95em; }
+    .badge { padding: 3px 10px; font-size: 0.7em; }
+    .category-tag { padding: 2px 8px; font-size: 0.68em; }
+    .footer { padding: 20px 12px; }
+  }
+  @media (max-width: 360px) {
+    .hero h1 { font-size: 1.2em; }
+    .hero .stats-row { gap: 8px; }
+    .hero .stat-value { font-size: 1.1em; }
+    .category-nav-grid { gap: 4px; }
+    .category-nav a { padding: 4px 8px; font-size: 0.68em; }
   }
   /* === DIAGRAM ZOOM CONTROLS === */
   .diagram-box { position: relative; }
